Version 1.11.8+dev:
 * Campaigns:
   * Heir to the Throne:
     * Gave Li'sar a new ability "initiative" (grants adjacent allies first
       strike in melee).
 * Language and i18n:
   * Updated translations: Portuguese, Scottish Gaelic
 * Lua API:
   * Added wesnoth.set_dialog_markup function (patch #2759).
 * Units:
   * Fixed subtle magenta TC for the Giant Mudcrawler sprites not being
     enabled in-game.
 * User interface:
   * Fixed hidden variations of unit types (hide_help=yes) being listed in the
     help browser when they shouldn't.
   * Gray-out GUI1 scrollbar upwards scrolling button by default when starting
     with the view scrolled to the top.
   * Truncate long Advanced Preferences entries with ellipses to avoid
     situations where the listbox is wider than the Preferences dialog frame
     (bug #19482).
   * Team color is now applied on the Unknown unit icon in the game Status
     Table regardless of whether the side's leader unit supports team color.
 * Miscellaneous and bug fixes:
   * Added -Wno-documentation-deprecated-sync to the CMake pedantic flags.
   * Fixed several Doxygen issues found by Clang 3.4.
   * Fixed possible invalid memory access issue in the MP sides configuration
     code causing crashes for some users (bug #21449).
   * Fixed broken image references in the Gameplay -> Time of Day help topic.
   * The internal variables used by the LIMIT_RECRUITS WML macro are now
     cleared on victory.
   * Fixed missing log error message for invalid music tracks set with
     play_once=yes (bug #21479).
   * Don't force the .gz suffix on every entry of the save_index (bug #20849).
   * Fixed a bug in [filter_vision] in SUFs that caused a hidden unit under
     fog/shroud to produce a false positive.
   * A lack of ToD schedule no longer causes segfaults (bug #21489).
   * SLF work again when x XOR y is specified (bug #21488).
   * Selecting off-map hexes, then hovering over a unit no longer causes