@@ -1,4 +1,6 @@
 Version 1.11.8+dev:
+ * AI:
+   * Wolves Micro AI: new optional parameter attack_only_prey=
  * Campaigns:
    * Heir to the Throne:
      * Gave Li'sar a new ability "initiative" (grants adjacent allies first
